new campaign new me

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				scale: 1.0,
 				scaleMobile: 1.0,
 				color: 0x694f5d,
-				color2: 0x68a691,
+				color2: 0x6c9c7c5,
 				backgroundColor: 0x0c090d,
 				size: 2.0,
 				sphereRotation: -0.002,
